docker, not fund route handling, error handling middleware

--- a/package.json
+++ b/package.json
@@ -10,29 +10,37 @@
     "check-types": "tsc --pretty --noEmit",
     "check-format": "prettier --check .",
     "build:watch": "tsc --watch",
-    "build:run": "nodemon build/app.js",
+    "build:run": "nodemon dist/app.js",
     "start:dev": "npm run build && cross-env NODE_ENV=development concurrently \"npm run build:watch\" \"npm run build:run\"",
-    "start:prod": "cross-env NODE_ENV=production node build/app.js",
-    "start": "cross-env NODE_ENV=development node build/app.js"
+    "start:prod": "cross-env NODE_ENV=production node dist/app.js",
+    "start": "cross-env NODE_ENV=development node dist/app.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "bcrypt": "^6.0.0",
+    "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "dotenv": "^16.5.0",
     "dotenv-flow": "^4.1.0",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
+    "pg": "^8.16.0",
     "reflect-metadata": "^0.2.2",
     "winston": "^3.17.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.27.0",
+    "@types/bcrypt": "^5.0.2",
+    "@types/cors": "^2.8.18",
     "@types/express": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/morgan": "^1.9.9",
     "@types/node": "^22.15.21",
+    "@types/pg": "^8.15.2",
     "concurrently": "^9.1.2",
     "eslint": "^9.27.0",
     "globals": "^16.1.0",
