--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,19 @@
 services:
   app:
     build: .
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
     ports:
       - ${PORT}:${PORT}
     env_file:
       - ${ENV_FILE}
     environment:
       - NODE_ENV=${NODE_ENV}
+      - PORT=${PORT}
+    command: npm run start:dev
     volumes:
       - .:/usr/src/app
-      - /usr/src/app/node_modules
+      # - /usr/src/app/node_modules
     networks:
       - app-network
 
