unit test &e2e test

--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "check-types": "tsc --pretty --noEmit",
     "check-format": "prettier --check .",
-    "build:watch": "npx tsup src/app.ts -d dist -f cjs -w",
+    "build:watch": "npx tsup src/app.ts -d dist cjs -w",
     "build:run": "nodemon --exec ts-node src/app.ts",
     "start:dev": "npm run build && cross-env NODE_ENV=development concurrently \"npm run build:watch\" \"npm run build:run\"",
     "start:prod": "cross-env NODE_ENV=production node dist/app.js",
-    "start": "cross-env NODE_ENV=development ts-node src/app.ts"
+    "start": "cross-env NODE_ENV=development ts-node src/app.ts",
+    "test": "cross-env NODE_ENV=test jest",
+    "migrate:up": "ts-node src/database/migrations/up.ts"
   },
   "keywords": [],
   "author": "",
@@ -36,16 +38,21 @@
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.18",
     "@types/express": "^5.0.2",
+    "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/morgan": "^1.9.9",
     "@types/node": "^22.15.21",
     "@types/pg": "^8.15.2",
+    "@types/supertest": "^6.0.3",
     "concurrently": "^9.1.2",
     "eslint": "^9.27.0",
     "globals": "^16.1.0",
+    "jest": "^29.7.0",
     "nodemon": "^3.1.10",
     "prettier": "^3.5.3",
     "rimraf": "^6.0.1",
+    "supertest": "^7.1.1",
+    "ts-jest": "^29.3.4",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "tsup": "^8.5.0",
