--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "pg": "^8.16.0",
+    "prismjs": "^1.30.0",
     "reflect-metadata": "^0.2.2",
     "winston": "^3.17.0"
   },
@@ -50,7 +51,7 @@
     "jest": "^29.7.0",
     "nodemon": "^3.1.10",
     "prettier": "^3.5.3",
-    "rimraf": "^6.0.1",
+    "redoc-cli": "^0.13.21",
     "supertest": "^7.1.1",
     "ts-jest": "^29.3.4",
     "ts-node": "^10.9.2",
