--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "check-types": "tsc --pretty --noEmit",
     "check-format": "prettier --check .",
-    "build:watch": "npx tsup src/app.ts -d dist cjs -w",
+    "build:watch": "npx tsup src/app.ts -d dist cjs",
     "build:run": "nodemon --exec ts-node src/app.ts",
     "start:dev": "npm run build && cross-env NODE_ENV=development concurrently \"npm run build:watch\" \"npm run build:run\"",
     "start:prod": "cross-env NODE_ENV=production node dist/app.js",
