--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "pg": "^8.16.0",
     "prismjs": "^1.30.0",
     "reflect-metadata": "^0.2.2",
+    "uuid": "^11.1.0",
     "winston": "^3.17.0"
   },
   "devDependencies": {
